@@ -1,5 +1,9 @@
 ## unreleased
 * fix incorrect old yaxpeax-arch version selection for ffi crates
+* address incorrect behavior of `Prefixes::cs()`
+  * this "getter" would in fact set the selected segment to `cs`. it has never
+    actually returned a `bool`, like other selector-checking methods on
+    `Prefixes`.
 
 ## 1.1.5
 * fix several typos across crate docs - thank you Bruce! (aka github user waywardmonkeys)
